@@ -1,16 +1,10 @@
-// RCS: @(#) $Id: tk.rc,v 1.8 2001/11/10 00:58:51 hobbs Exp $
+// RCS: @(#) $Id: tk.rc,v 1.9 2002/06/18 00:34:45 davygrvy Exp $
 //
 // Version Resource Script
 //
 
 #include <windows.h>
-
-#define RESOURCE_INCLUDED
 #include <tk.h>
-
-#define STRINGIFY1(x)	    #x
-#define STRINGIFY(x)	    STRINGIFY1(x) 
-
 
 //
 // build-up the name suffix that defines the type of build this is.
@@ -48,7 +42,7 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             VALUE "FileDescription", "Tk DLL\0"
-            VALUE "OriginalFilename", "tk" STRINGIFY(TK_MAJOR_VERSION) STRINGIFY(TK_MINOR_VERSION) SUFFIX ".dll\0"
+            VALUE "OriginalFilename", "tk" STRINGIFY(JOIN(TK_MAJOR_VERSION,TK_MINOR_VERSION)) SUFFIX ".dll\0"
             VALUE "CompanyName", "ActiveState Corporation\0"
             VALUE "FileVersion", TK_PATCH_LEVEL
             VALUE "LegalCopyright", "Copyright \251 2001 by ActiveState Corporation, et al\0"
