@@ -1,3 +1,14 @@
+2002-06-17  David Gravereaux <davygrvy@pobox.com>
+
+	Trims to support the removal of RESOURCE_INCLUDED from rc
+	scripts from Tcl's accepted FR #565088.
+
+	* generic/tk.h: Changed RESOURCE_INCLUDED to be RC_INVOKED
+	as the RC tool defines this already by default.
+
+	* win/rc/tk.rc:
+	* win/rc/wish.rc: removed the #define RESOURCE_INCLUDED lines.
+
 2002-06-17  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* unix/Makefile.in (dist): correct installation of
